--- a/23_bt_stevejobsghost_ericaL-veritL/index.html
+++ b/23_bt_stevejobsghost_ericaL-veritL/index.html
@@ -67,6 +67,6 @@ time spent: 0.5 hr
     </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>stevejobsghost: Erica Li (hugo) and Verit Li (Nibbles) </h1>
   </body>
 </html>
