--- a/23_bt_stevejobsghost_ericaL-veritL/index.html
+++ b/23_bt_stevejobsghost_ericaL-veritL/index.html
@@ -1,10 +1,10 @@
 <!--
 stevejobsghost: Verit Li (Nibbles), Erica Li (Hugo)
-K23 - Bootcamp Features
+K23 - Bootstrap Features
 Soft Dev
 2022-11-28
 time spent: 0.5 hr
--->
+--> 
 
 <!doctype html>
 <html lang="en">
@@ -12,61 +12,57 @@ time spent: 0.5 hr
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap "On Ramp" </title>
+    <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <style>  
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
   </head>
   <body>
+    <!-- JS and Poppers -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+
     <h1>stevejobsghost: Erica Li (hugo) and Verit Li (Nibbles) </h1>
+    <main> 
+      <!-- NAV BAR -->
+      <nav class="navbar navbar-expand-lg bg-light text-bg-dark text-center">
+        <div class="container">
+          <a class="navbar-brand" href="#"> HOME </a>
+        
+        </div>
+      </nav>
+        <a header class = "d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <span class = "true header"> SLAY </span>
+           <!-- nav-items allows it to not look like a link, bringing the user to a new page but is still clickable -->
+        </a>
+          <ul class = "nav nav-pills"> 
+            <li class = "nav-item">
+              <!-- nav-link active bolds the item in the navbar  allows it to not look like a link, bringing the user to a new page but is still clickable -->
+              <a href = "#" class="nav-link active" aria-current="page"> Slayed </a>
+            </li>
+            <li class = "nav-item">
+              <a href = "#" class="nav-link active" aria-current="page"> Slay </a>
+            </li>
+            <li class = "nav-item">
+              <a href = "#" class="nav-link active" aria-current="page"> Slayer </a>
+            </li>
+            <li class = "nav-item">
+              <a href = "#" class="nav-link active" aria-current="page"> Slayest </a>
+            </li>
+          </ul>
+        </header>
+      </div>
+      <br> <br> 
+      <h2> Dropdown Items: What's Your Level of Slay? </h2>
+      <!--form-select is a dropdown-menu that users can see and click -->
+      <select class="form-select" aria-label="Default select example">
+        <!--selected specifies that this should be the option visible to the user before a choice is made -->
+        <option selected> What's Your Level of Slay? </option>
+        <!-- form-select options -->
+        <option value="1"> slayed </option>
+        <option value="2"> slay </option>
+        <option value="3"> slayer </option>
+        <option value="4"> slayest </option>
+      </select>
+
+    </main>
   </body>
 </html>
