--- a/23_bt_stevejobsghost_liE-liV/index.html
+++ b/23_bt_stevejobsghost_liE-liV/index.html
@@ -2,8 +2,9 @@
 stevejobsghost: Verit Li (Nibbles), Erica Li (Hugo)
 K23 - Bootcamp Features
 Soft Dev
-2022-11-28
-time spent: 2.0 hr-->
+2022-11-29
+time spent: 2.0 hr
+-->
 
 <!doctype html>
 <html lang="en">
