--- a/24_fd_stevejobsghost_liE-liV/index.html
+++ b/24_fd_stevejobsghost_liE-liV/index.html
@@ -13,13 +13,15 @@ time spent: 1.0 hr
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
     </head>
 
+<body>
+
 <div class="top-bar">
     <div class="top-bar-left">
         <ul class="dropdown menu">
             <li class="menu-text">stevejobsghost: erica (hugo) & verit (nibbles) </li>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Create Story</a></li>
-            <li><a href="#">Add to Story</a></li>
+            <li><a href="#">New Ducky</a></li>
+            <li><a href="#">Add to Ducky</a></li>
         </ul>
     </div>
     <div class="top-bar-right">
@@ -39,3 +41,46 @@ time spent: 1.0 hr
         </ul>
     </div>
 </div>
+
+<div class="media-object">
+        <div class="media-object-section">
+          <div class="thumbnail">
+            <img src="nibbles.jpg" width="200" height="200">
+          </div>
+        </div>
+        <div class="media-object-section">
+          <h4>Nibbles</h4>
+          <p>This is Nibbles. He is of the species hamstar and found his orgins in a Dave &#38; Buster's arcade.
+		  But the arcade was no kindred place and at night, the so called "prizes" had to battle in a fight to the death - 
+		  gladitorial style.
+		  This was all to appease and entertain the high ranking "game consoles" whose worth was denoted by their hundreds of thousands 
+		  of "tickets." Nibbles, desiring his freedom, would battle in this colosseum until he earned a total of 3000 
+		  tickets which he used to buy a sombrero - a clever disguise to sneak out of the arcade. After leaving his 
+		  gladiator days behind him, Nibbles met DVL and now can be usually usually found residing on his bed, 
+		  sometimes even donning the signature sombrero.</p>
+        </div>
+      </div>
+	  
+	  
+<div class="media-object">
+        <div class="media-object-section">
+          <div class="thumbnail">
+            <img src="#" width="200" height="200">
+          </div>
+        </div>
+        <div class="media-object-section">
+          <h4>Hugo</h4>
+          <p>This is Hugo. He is ... a bear & hamster? To be honest, I don't really know what he is. I found him when my 
+            friend introduced me to him on my birthday in freshman year. He is really sweet and has stuck by me through 
+            both good and bad times. 
+
+            Hugo is sometimes temperamental. One time, he met the Angel of Persia and jumped on her to try to get a feather
+            from her beautiful wings. That was a HUGE no-no. The Angel of Persia caught him and threatened to skin him alive.
+            He never touched an angel's wings without asking first now. 
+          </p>
+        </div>
+      </div>	  
+
+<body/>
+
+</html>
