--- a/24_fd_stevejobsghost_liE-liV/index.html
+++ b/24_fd_stevejobsghost_liE-liV/index.html
@@ -40,12 +40,16 @@ time spent: 1.0 hr
             <li><button type="button" class="button">Search</button></li>
         </ul>
     </div>
-</div>
+  </div>
+  <br><br>
 
 <div class="media-object">
         <div class="media-object-section">
           <div class="thumbnail">
-            <img src="nibbles.jpg" width="200" height="200">
+            <figure>
+            <img src="https://m.media-amazon.com/images/I/51wR2SnQTQL.jpg" width="200" height="200" alt = "a wild nibbles">
+            <figcaption>a wild nibbles</figcaption>
+          </figure>
           </div>
         </div>
         <div class="media-object-section">
@@ -65,7 +69,7 @@ time spent: 1.0 hr
 <div class="media-object">
         <div class="media-object-section">
           <div class="thumbnail">
-            <img src="#" width="200" height="200">
+            <img src="https://i5.walmartimages.com/asr/123a29c7-e90b-41c5-91e2-a039131891e5.9d43b2dacc1f2014f806d2edc91abd4e.jpeg" width="200" height="200">
           </div>
         </div>
         <div class="media-object-section">
@@ -81,6 +85,6 @@ time spent: 1.0 hr
         </div>
       </div>	  
 
-<body/>
+    </body>
 
 </html>
