--- a/28_jsdom/index.html
+++ b/28_jsdom/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-     Team Phantom Tollbooth :: Clyde Sinclair, Fierce Dragon
+     Team iHeartAI: Erica Li, Nada Hameed 
      SoftDev pd0
      K28 -- Manipulating the DOM
      2023-04-05w
