--- a/29_jsdom/index.html
+++ b/29_jsdom/index.html
@@ -1,9 +1,7 @@
-<!-- we can put this code into the DOM visualizer and it'll show us what the webpage wld look like-->
-
 <!DOCTYPE html>
 
 <!--
-     Team iHeartAI: Erica Li, Nada Hameed 
+;// Team Hair Investment Uncles :: Daniel He, Justin Mohabir, Sir, Alfred
      SoftDev pd2
      K28 -- Manipulating the DOM
      2023-04-05w
@@ -16,9 +14,10 @@
   <head>
     <meta charset="utf-8">
     <style>
+      
+      .blue  {color : #0000ff;}
       .red   {color : #ff0000;}
       .green {color : #00ff00;}
-      .blue  {color : #0000ff;}
     </style>
   </head>
 
@@ -29,17 +28,20 @@
     <div id="div2">This is a second div</div>
     <div class="blue">This is a toid div</div>
 
+
     <ol id="thelist">
       <li class="">item 0</li>
-      <li class="green blue">item 1</li>
+      <li class="blue green">item 1</li>
       <li class="green blue">item 2</li>
-      <li class="red green blue">item 3</li>
+      <li class="red green">item 3</li>
       <li class="red green blue">item 4</li>
       <li class="green blue">item 5</li>
       <li class="green blue">item 6</li>
       <li class="">item 7</li>
     </ol>
-
+    <button type="button" id="fib">fib</button>
+    <button type="button" id="fac">fac</button>
+    <button type="button" id="gcd">gcd</button>
     <script src="dommy_consolery.js"></script>
 
   </body>
