--- a/30_jscanvas/clickdraw.html
+++ b/30_jscanvas/clickdraw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Clyde Sinclair
-       SoftDev pd0
+  <!-- Wired Creations: William Guo, Craig Chen
+       SoftDev pd2
        K30 -- canvas based JS drawing
        2023-04-24m
 
@@ -27,7 +27,7 @@
     </canvas>
   </div>
 
-  <button id="buttonToggle">rect|circle</button>
+  <button id="buttonToggle">rect|circ</button>
   <button id="buttonClear">wipe</button>
 
   <script src="clickdraw.js"></script>
