--- a/30_jscanvas/clickdraw.html
+++ b/30_jscanvas/clickdraw.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Wired Creations: William Guo, Craig Chen
+       iHeartAI: Erica Li, Nada Hameed
        SoftDev pd2
        K30 -- canvas based JS drawing
        2023-04-24m
